syntax = "proto3";

package pushnotificationsservice;

option java_multiple_files = true;
option java_package = "com.hab.grpc.pushnotificationsservice";
option java_outer_classname = "PushNotificationServiceGRPC";

message SubscribePushNotificationRequest{
	string user_id=1;
}

message SubscribePushNotificationResponce{
	string from_user_id = 1;
	string message = 2;
	string from_user_name = 3;
}

message PushNotificationRequest{
	string user_id=1;
	string message = 2;
	string to_user_id = 3;
	string from_user_name = 4;
}
message PushNotificationResponce{
	int32 response_code = 1;
}

message UnSubscribePushNotificationRequest {
	string user_id=1;
}

message UnSubscribePushNotificationResponce {

}

service PushNotifications{
	rpc SubscribeToPushNotifications(SubscribePushNotificationRequest) returns(stream SubscribePushNotificationResponce){}
	rpc SendPushNotification(PushNotificationRequest) returns(PushNotificationResponce){}
	rpc UnSubscribePushNotification(UnSubscribePushNotificationRequest) returns(UnSubscribePushNotificationResponce){}
}